devops/kube/frontend_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: forge-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forge-frontend
  template:
    metadata:
      labels:
        app: forge-frontend
    spec:
      containers:
      - name: forge-frontend
        image: dajpearl/forge-frontend:latest
        resources:
          requests:
            memory: "500Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "200m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: forge-frontend
  ports:
  - port: 3000
    name: frontend
    protocol: TCP
