devops/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: forge-ingress
  annotations:
    kubernetes.io/ingress.class: istio
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: istio
  rules:
  - host: '*.forge.matthewcradit.com'
    http:
      paths:
      - backend:
          serviceName: t2backend-forge-backend.team2.svc.cluster.local
          servicePort: 80
        path: "/api(/|$)(.*)"
        pathType: Prefix

  - host: '*.forge.matthewcradit.com/'
    http:
      paths:
      - backend:
          serviceName: t2frontend-forge-frontend.team2.svc.cluster.local
          servicePort: 80
        path: /
        pathType: Prefix
